--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="save_artwork">Save Artwork</string>
     <string name="FirstText">First Text</string>
     <string name="todo">TODO</string>
+    <string name="textview">TextView</string>
 </resources>
